@@ -13,8 +13,9 @@ set throttle_speed 64
 set accounting_dir "/var/run/l2tpns/acct"
 set setuid 0
 set dump_speed no
-load plugin "garden"
+load plugin "sessionctl"
 load plugin "throttlectl"
 load plugin "autothrottle"
 load plugin "snoopctl"
 load plugin "autosnoop"
+load plugin "garden"
